--- a/PontHatTests/PontHatTests.csproj
+++ b/PontHatTests/PontHatTests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PontHatOOP_\PontHatOOP_.csproj">
+      <Project>{90e5323d-3bb9-4b7d-8ae9-2d81d3048849}</Project>
+      <Name>PontHatOOP_</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
